# Hello_world

./: .gitignore  readme.txt  test.txt  Диаграмма без названия.drawio
AITU_SoftQualATesting/: README.md
AITU_SoftQualATesting/AlarsAssig2/: pom.xml
CMake/: README.md
CMake/call_c_from_cpp/: .gitignore  README.md  app  build.sh  legacy.c  legacy.h  main.cpp
CMake/cmake_tutorial/: CMakeLists.txt  CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.md  TutorialConfig.h.in  rm_installed.sh  tutorial.cxx
CMake/cmake_tutorial/MathFunctions/: CMakeLists.txt  MakeTable.cmake  MakeTable.cxx  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx
CMake/cmake_tutorial/import_cmake_tutorial/: CMakeLists.txt  README.md  tutorial.cxx
CMake/git_submodules/: README.md
CMake/project_structure/: .gitignore  README.md
CMake/runtime_linking/: README.md  app  build.sh  build_static.sh  main.cpp
CMake/shared_library/: README.md  app  build.sh  build_static.sh
CMake/simple_cli/: CMakeLists.txt  README.md  main.cpp
CMake/simple_cmake/: CMakeLists.txt  README.md
CMake/simple_library/: README.md
CMake/simple_library/application/: CMakeLists.txt  README.md  main.cpp  program
CMake/simple_library/mymathlib/: CMakeLists.txt  README.md  adder.cpp  adder.h
CMake/simple_make/: .gitignore  Makefile  README.md
CMake/vector_project/: Makefile  README.md
CMake/win_dlls/: README.md  build.sh  main.cpp
CUDA/: README.md  main.cu
CUDA/CUDAReduction/: README.md  add_main.cu  dli.hpp  main.cu  main.out  memcpy_time.cu  shared.cu
GDB/: debug.cpp
JavaModulesUse/: README.md
Node/GettingFilesHash/: server.js
Node/NodeGoogleOAuth/: USERS.js  package-lock.json  package.json  server.js
Node/NodeJWT/: package-lock.json  package.json  server.js
Node/NodeMulter/: .gitignore  README.md  multer-manager.js  package-lock.json  package.json  server.js
Node/NodeMulterBlueprint/: package-lock.json
Node/NodePassportLocal/: package-lock.json  package.json  server.js
Node/NodeSequelize1/: multer-manager.js  package-lock.json  package.json  server.js
Node/Swagger/: package-lock.json  package.json  server.js
devops/: commands.txt
devops/hello-docker/: index.js  package.json
go/env/: go.mod
go/first/: main.go
go/greenlight/: go.mod
go/greenlightFinal/: go.mod  go.sum
go/greenlight_copy/: go.mod  go.sum
hello_c/: README.md
hello_c/0_hello_world/: README.md  hello.c
hello_c/1_pointers/: README.md  free.c  function.c  mem_alloc.c  pointer.c
hello_c/2_0_const/: 1.c  README.md
hello_c/2_1_1_arrays/: arrays2.c
hello_c/2_1_2_2D_arrays/: main.c
hello_c/2_2_structs/: arrows.c  basic.c  function.c  main.c  program  var_declaration.c
hello_c/2_arrays/: arrays.c  arrays3.c
hello_c/3_exceptions/: assert.c  custom_error.c  errno.c
hello_c/4_enum/: source.c
hello_c/5_extern/: library.c  main.c  program
hello_c/6_modules/: library.c  main.c
hello_c/7_include_guards/: Portfolio Courses (YouTube) - How To Create a Library and Split a Program Across Multiple Files.md  Portfolio Courses (YouTube) - Include Guards and Pragma Once.md  README.md  course.h  main.c  student.h
hello_c/8_OOP/: main.c
hello_conda/: Install Python on Debian.md  Python Modules.md  README.md  environment.yml  main.py
hello_cpp/: C++ Programming Language.md  args.cpp  array.cpp  data_type.cpp  function.cpp  function_pointers.cpp  my_program  pointer.c  quiz.cpp  struct.c
hello_cpp/L/: KBTU Programming Principles.md
hello_cpp/headers/: main.cpp  utils.cpp  utils.h
hello_js/Node/: 1.js  site.html
hello_python/filters/: filters.py  testpascal.py
hello_python/hello_world/: hello_excel.py  hello_file.py  hello_matplotlib.py  hello_write_csv.py  mse_line.py  time_parser.py  unfold.py
hello_python/lstm_test/: lstmcell.py
hello_python/src/: main.py  mydata.py  mylstm.py  test.py  trainer.py
hello_python/wifi/: 1.py
hello_react/: .gitignore  Readme.md
hello_react/0 js basic/: script.js  style.css  v.js
hello_react/00_React_Blueprint/: package-lock.json  package.json  webpack.config.js
hello_react/0_js_basic/: array.js  index.html
hello_react/1 functional concepts/: conversion.js
hello_react/10_testing/: .eslintrc.json  Readme.md  package-lock.json  package.json  webpack.config.js
hello_react/11_routing/: package-lock.json  package.json  webpack.config.js
hello_react/12_server/: package.json  readme.txt  webpack.config.js  webpack.server.js
hello_react/13_routing/: package-lock.json  package.json  readme.txt  webpack.config.js
hello_react/1_functional_concepts/: higher_order_f.js  immutability.js  timerFunctional.js  timerImperative.js
hello_react/3_react_basic/: components.html  jsx.html
hello_react/4 webpack babel/: package-lock.json  readme.txt  webpack.config.js
hello_react/4_webpack_babel/: package.json
hello_react/5_states/: package-lock.json  package.json
hello_react/6_context/: package-lock.json
hello_react/7_hooks/: package-lock.json  package.json
hello_react/8_data/: package-lock.json  package.json  webpack.config.js
hello_react/9_suspense/: package-lock.json  package.json  webpack.config.js
js_fullstack/graphql_basic/: package-lock.json  package.json
js_fullstack/local_files/: README.md  package-lock.json  package.json  server.js
js_fullstack/mongodb_basic/: package-lock.json
node/000_clean_authentication/: index.js  package-lock.json
node/10_errors/: index.js  package.json
node/11_posts/: index.js  package.json
node/12_jwt/: package-lock.json  package.json
node/13_store_session/: index.js  package-lock.json
node/14_inside_html/: server.js
node/1node_server/: server.js
node/2express_basic/: index.js  package-lock.json  package.json
node/2express_handlebars/: index.js  package-lock.json
node/3express_forms/: package-lock.json  package.json
node/4express_cookies_session/: config.js  (+2 more)
node_sequalize/: Readme.md  package-lock.json  package.json  server.js
pybind11/: main.py  module.cpp
react_blueprint/: package-lock.json  package.json
webpack/: package-lock.json  package.json  webpack.config.js
(+622 files in other folders)
